objects/Conversation_User__c/Conversation_User__c.object-meta.xml
<CustomObject>
    <label>Insights (Deprecated)</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insights (Deprecated)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>